--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "less": "^4.1.1",
+    "less-loader": "7.3.0",
+    "sass-loader": "^10",
     "vue": "^2.6.12",
     "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
@@ -30,9 +34,8 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.0",
-    "postcss-loader": "^5.3.0",
+    "postcss-loader": "^3.0.0",
     "sass": "^1.34.1",
-    "sass-loader": "^12.0.0",
     "style-loader": "^2.0.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
