--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "less": "^4.1.1",
     "less-loader": "7.3.0",
@@ -33,10 +35,12 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^8.3.0",
     "postcss-loader": "^3.0.0",
     "sass": "^1.34.1",
     "style-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
