--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,9 +1,12 @@
+appdirs==1.4.4
 asgiref==3.4.1
 Django==3.2
 django-jinja==2.9.0
+et-xmlfile==1.1.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 mod-wsgi==4.8.0
 mysqlclient @ file:///C:/xampp/htdocs/e_mysite/mysqlclient-1.4.6-cp39-cp39-win_amd64.whl
+openpyxl==3.0.7
 pytz==2021.1
 sqlparse==0.4.1
