--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "less": "^4.1.1",
     "less-loader": "7.3.0",
     "sass-loader": "^10",
