--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ mysqlclient = {path = "./mysqlclient-1.4.6-cp39-cp39-win_amd64.whl"}
 django-jinja = "*"
 jinja2 = ">=2.10"
 mod-wsgi = "*"
+django-environ = "*"
+pillow = "*"
+python-decouple = "*"
+djangorestframework = "*"
 
 [dev-packages]
 
