--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "less": "^4.1.1",
     "less-loader": "7.3.0",
     "sass-loader": "^10",
+    "v-viewer": "^1.6.4",
     "vue": "^2.6.12",
     "vue-router": "^3.4.3"
   },
